2000-01-16  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>

	* plug-ins/common/waves.c
	* plug-ins/common/whirlpinch.c
	* plug-ins/common/wind.c
	* plug-ins/common/wmf.c
	* plug-ins/pagecurl/pagecurl.c
	* plug-ins/pagecurl/Makefile.am
	* po-plug-ins/POTFILES.in: added gettext support.

	* app/text_tool.c: i18n fix.

2000-01-15 Garry R. Osgood <gosgood@idt.net>

	* app/layers_dialog.c
	* app/global_edit.c
        layers_dialog.c:layers_dialog_flush() now has
        only one entry and exit point, so that 
        suspend_gimage_notify is properly maintained.
        Has bearing on (but likely does not fully solve)
        bugs #4031, #4914, and #4927. (Layers and 
	Channel Dialog with sticky layers. See 
        http://idt.net/~gosgood/gimp-patch/patch04.html
        and bug reports.
        global_edit.c: edit_paste_as_new() now checks
        if it has a valid layer from layer_new_from_tiles()

2000-01-15  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpwidgets.[ch]: added a float adjustment callback.

	* plug-ins/common/bumpmap.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/despeckle.c
	* plug-ins/common/destripe.c
	* plug-ins/common/gpb.c
	* plug-ins/common/iwarp.c
	* plug-ins/common/polar.c
	* plug-ins/common/sharpen.c
	* plug-ins/common/tileit.c
	* plug-ins/common/whirlpinch.c
	* plug-ins/common/wind.c:

	- Some more hscale+spinbutton instead of hscale+entry widgets.
	- Get the CHECK_SIZE constants from libgimp in some plugins.

Sat Jan 15 15:40:26 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* plug-ins/webbrowser/webbrowser.c: Small i18n fix.

Sat Jan 15 13:49:37 CET 2000  Sven Neumann <sven@gimp.org>

	* app/preferences_dialog.c: Moved a few entries to other pages. 
	Makes much more sense now, IMHO.

Fri Jan 14 22:34:13 CET 2000  Sven Neumann <sven@gimp.org>

	* libgimp/gimp.h
	* libgimp/gimpselection.c: added a few new PDB wrappers 

	* plug-ins/common/align_layers.c
	* plug-ins/common/blinds.c
	* plug-ins/common/checkerboard.c